 + New Date_Time system APIs, and Date_Time string formatting
 + clean_all_lines remves trailing whitespace and removes blank lines
 + New command, clean_trailing_whitespace leaves blank lines
 + Fix: when generated/metadata* files are missing buildsuper still succeeds
 + Fix: mac does not hang opening multiple files
 + Fix: line number margin performance
 + Fix: no crash in notepade like mode when replacing a highlighted range in a parsed file
 + Fix: no thread handle leak when closing a view
 + Fix: no crash when a project file .cmd is not the right type
 + Fix: windows layer now generates layout independent key stroke events
 + Fix: notepad like mode scrolling does not snap mark to cursor
 + Fix: special case colors from the theme override general case colors
 + Fix: paste fade range is updated with buffer edits
 + Fix: on windows releasing click off window is detected

4.1.4
 + MAJOR: The clipboard history is now a fully custom layer implemented system. Users maintaining a customization layer should try to update their call sites to the old clipboard API. #define FCODER_TRANSITION_TO 4001004 to disable the transitional function wrappers when you are ready to make the transition.
 + buildsuper scripts now all come with '-win' '-linux' '-mac' postfixes and pass their OS identifier macro on the build line
 + clipboard is only read when the requests to, or when the collect-all mode is started via the command 'begin_clipboard_collection_mode'
 + 'clear_clipboard' command
 + in config.4coder the variable virtual_whitespace_regular_indent determines the number of space-widths to use as the regular indentation in a virtual whitespace layout
 + show whitespace mode implemented in 'default_render_buffer'
 + `set_face_size` and `set_face_size_this_buffer` commands
 + `HookID_WholeScreenRenderCaller` hook runs once per frame after all views render
 + Bindings use exact matches for modifiers, instead of most recent sub-set matches
 + Extended key codes list