@@ -122,6 +122,7 @@ vtable->get_current_input = get_current_input;
 vtable->set_current_input = set_current_input;
 vtable->leave_current_input_unhandled = leave_current_input_unhandled;
 vtable->set_custom_hook = set_custom_hook;
+vtable->get_custom_hook = get_custom_hook;
 vtable->set_custom_hook_memory_size = set_custom_hook_memory_size;
 vtable->get_mouse_state = get_mouse_state;
 vtable->get_active_query_bars = get_active_query_bars;
@@ -302,6 +303,7 @@ get_current_input = vtable->get_current_input;
 set_current_input = vtable->set_current_input;
 leave_current_input_unhandled = vtable->leave_current_input_unhandled;
 set_custom_hook = vtable->set_custom_hook;
+get_custom_hook = vtable->get_custom_hook;
 set_custom_hook_memory_size = vtable->set_custom_hook_memory_size;
 get_mouse_state = vtable->get_mouse_state;
 get_active_query_bars = vtable->get_active_query_bars;
