@@ -20,6 +20,7 @@ use_paren_helper = true;
 use_comment_keywords = true;
 lister_whole_word_backspace_when_modified = false;
 show_line_number_margins = false;
+enable_output_wrapping = false;
 
 // Code Wrapping
 treat_as_code = ".cpp.c.hpp.h.cc.cs.java.rs.glsl.m.mm";
